# flucoma-pd

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  FluidCorpusManipulationOverview.pd  Fluid_Decomposition_Overview.pd  QuickStart.md  README.deken.pd  README.md
.github/workflows/: nightly.yaml  nightly.yml  release.yml
abstractions/: fluid.concataudiofiles-help.pd  fluid.concataudiofiles.pd  fluid.ds2text.pd  fluid.ls2text.pd  fluid.plotter.pd  fluid.s2f.pd  xy.pd
examples/Tutorials/: classification.pd  regression.pd
examples/array_compositing/: bufcomposemacros.pd
examples/nmf/: JiT-NMF-classifier.pd  JiT-NMF.pd
examples/segmentation/: nb_of_slices.pd
examples/video_tutorial_patches/: classification.pd  regression.pd
help/: fluid.ampfeature~-help.pd  fluid.ampgate~-help.pd  fluid.ampslice~-help.pd  fluid.audiotransport~-help.pd  fluid.box.pd  fluid.bufampfeature-help.pd  fluid.bufampgate-help.pd  fluid.bufampslice-help.pd  fluid.bufampslice~-help.pd  fluid.bufaudiotransport-help.pd  fluid.bufchroma-help.pd  fluid.bufcompose-help.pd  fluid.bufcompose~-help.pd  fluid.bufflatten-help.pd  fluid.bufhpss-help.pd  fluid.bufhpss~-help.pd  fluid.bufinfo-help.pd  fluid.bufloudness-help.pd  fluid.bufloudness~-help.pd  fluid.bufmelbands-help.pd  fluid.bufmelbands.polyoscil.pd  fluid.bufmelbands~-help.pd  fluid.bufmfcc-help.pd  fluid.bufmfcc~-help.pd  fluid.bufnmf-help.pd  fluid.bufnmfcross-help.pd  fluid.bufnmfseed-help.pd  fluid.bufnmf~-help.pd  fluid.bufnndsvd-help.pd  fluid.bufnoveltyfeature-help.pd  fluid.bufnoveltyslice-help.pd  fluid.bufnoveltyslice~-help.pd  fluid.bufonsetfeature-help.pd  fluid.bufonsetslice-help.pd  fluid.bufonsetslice~-help.pd  fluid.bufpitch-help.pd  fluid.bufpitch.grain.pd  fluid.bufpitch~-help.pd  fluid.bufscale-help.pd  fluid.bufselect-help.pd  (+82 more)
include/: FluidPDWrapper.hpp  PDBufferAdaptor.hpp
local_docs/: fluid.bufinfo.html  fluid.concataudiofiles.html  fluid.ds2text.html  fluid.ls2text.html  fluid.multiarray.html  fluid.plotter.html  fluid.s2f.html  fluid.waveform.html
scripts/: MakePDSources.cmake  MakeWorkingFolder.cmake  pd-linker-flags.txt  pd-posttarget.cmake  pd-pretarget.cmake
src/fluid.ampfeature_tilde/: fluid.ampfeature_tilde.cpp
src/fluid.ampgate_tilde/: fluid.ampgate_tilde.cpp
src/fluid.ampseg_tilde/: fluid.ampseg_tilde.cpp
src/fluid.ampslice_tilde/: fluid.ampslice_tilde.cpp
src/fluid.audiotransport_tilde/: fluid.audiotransport_tilde.cpp
src/fluid.bufampfeature/: fluid.bufampfeature.cpp
src/fluid.bufampgate/: fluid.bufampgate.cpp
src/fluid.bufampseg_tilde/: fluid.bufampseg_tilde.cpp
src/fluid.bufampslice/: fluid.bufampslice.cpp
src/fluid.bufampslice_tilde/: fluid.bufampslice_tilde.cpp
src/fluid.bufaudiotransport/: fluid.bufaudiotransport.cpp
src/fluid.bufchroma/: fluid.bufchroma.cpp
src/fluid.bufcompose/: fluid.bufcompose  fluid.bufcompose.cpp
src/fluid.bufcompose_tilde/: fluid.bufcompose_tilde.cpp
src/fluid.bufflatten/: CMakeLists.txt  fluid.bufflatten.cpp
src/fluid.bufhpss/: fluid.bufhpss  fluid.bufhpss.cpp
src/fluid.bufhpss_tilde/: fluid.bufhpss_tilde.cpp
src/fluid.bufinfo/: CMakeLists.txt  fluid.bufinfo.cpp
src/fluid.bufloudness/: fluid.bufloudness  fluid.bufloudness.cpp
src/fluid.bufloudness_tilde/: fluid.bufloudness_tilde.cpp
src/fluid.bufmelbands/: CMakeLists.txt  fluid.bufmelbands.cpp
src/fluid.bufmelbands_tilde/: fluid.bufmelbands_tilde.cpp
src/fluid.bufmfcc/: fluid.bufmfcc.cpp
src/fluid.bufmfcc_tilde/: fluid.bufmfcc_tilde.cpp
src/fluid.bufnmf/: fluid.bufnmf  fluid.bufnmf.cpp
src/fluid.bufnmf_tilde/: fluid.bufnmf_tilde.cpp
src/fluid.bufnmfcross/: fluid.bufnmfcross.cpp
src/fluid.bufnndsvd/: fluid.bufnndsvd.cpp
src/fluid.bufnoveltyfeature/: fluid.bufnoveltyfeature.cpp
src/fluid.bufnoveltyslice/: fluid.bufnoveltyslice  fluid.bufnoveltyslice.cpp
src/fluid.bufnoveltyslice_tilde/: fluid.bufnoveltyslice_tilde.cpp
src/fluid.bufonsetfeature/: fluid.bufonsetfeature.cpp
src/fluid.bufonsetslice/: fluid.bufonsetslice.cpp
src/fluid.bufonsetslice_tilde/: fluid.bufonsetslice_tilde.cpp
src/fluid.bufpitch/: fluid.bufpitch  fluid.bufpitch.cpp
src/fluid.bufpitch_tilde/: fluid.bufpitch_tilde.cpp
src/fluid.bufrtnoveltyslice_tilde/: fluid.bufrtnoveltyslice_tilde.cpp
src/fluid.bufscale/: fluid.bufscale.cpp
src/fluid.bufselect/: fluid.bufselect.cpp
src/fluid.bufselectevery/: fluid.bufselectevery.cpp
src/fluid.bufsines/: fluid.bufsines  fluid.bufsines.cpp
src/fluid.bufsines_tilde/: fluid.bufsines_tilde.cpp
src/fluid.bufspectralshape/: fluid.bufspectralshape  fluid.bufspectralshape.cpp
src/fluid.bufspectralshape_tilde/: fluid.bufspectralshape_tilde.cpp
src/fluid.bufstats/: fluid.bufstats.cpp
src/fluid.bufstats_tilde/: CMakeLists.txt  fluid.bufstats_tilde.cpp
src/fluid.bufstft/: fluid.bufstft.cpp
src/fluid.bufthreaddemo/: fluid.bufthreaddemo  fluid.bufthreaddemo.cpp
src/fluid.bufthreaddemo_tilde/: fluid.bufthreaddemo_tilde.cpp
src/fluid.bufthresh/: fluid.bufthresh.cpp
src/fluid.buftransients/: fluid.buftransients  fluid.buftransients.cpp
src/fluid.buftransients_tilde/: fluid.buftransients_tilde.cpp
src/fluid.buftransientslice/: fluid.buftransientslice.cpp
src/fluid.buftransientslice_tilde/: fluid.buftransientslice_tilde.cpp
src/fluid.chroma_tilde/: fluid.chroma_tilde.cpp
src/fluid.gain_tilde/: fluid.gain_tilde.cpp
src/fluid.hpss_tilde/: fluid.hpss_tilde.cpp
src/fluid.loudness_tilde/: fluid.loudness_tilde.cpp
src/fluid.melbands_tilde/: fluid.melbands_tilde.cpp
src/fluid.mfcc_tilde/: fluid.mfcc_tilde.cpp
src/fluid.nmffilter_tilde/: fluid.nmffilter_tilde.cpp
src/fluid.nmfmatch_tilde/: fluid.nmfmatch_tilde.cpp
src/fluid.nmfmorph_tilde/: fluid.nmfmorph_tilde.cpp
src/fluid.noveltyfeature_tilde/: fluid.noveltyfeature_tilde.cpp
src/fluid.noveltyslice_tilde/: fluid.noveltyslice_tilde.cpp
src/fluid.onsetfeature_tilde/: fluid.onsetfeature_tilde.cpp
src/fluid.onsetslice_tilde/: fluid.onsetslice_tilde.cpp
src/projects/fluid.mfcc_tilde/: CMakeLists.txt  fluid.mfcc_tilde.cpp
tests/: human testing.pd
(+66 files in other folders)
